--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-fileupload": "^1.5.2",
     "form-data": "^4.0.3",
     "lucide-react": "^0.344.0",
+    "puppeteer": "^24.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
