--- a/package.json
+++ b/package.json
@@ -10,19 +10,18 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^1.10.0",
-    "cheerio": "^1.1.0",
-    "express": "^5.1.0",
+    "axios": "^1.7.2",       
+    "cheerio": "^1.0.0-rc.12",  
+    "express": "~4.19.2",    
     "express-fileupload": "^1.5.2",
-    "form-data": "^4.0.3",
+    "form-data": "^4.0.0",       
     "lucide-react": "^0.344.0",
-    "playwright": "^1.45.0",
-    "puppeteer": "^24.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/node": "^20.14.12",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
