--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^1.7.2",       
-    "cheerio": "^1.0.0-rc.12",  
-    "express": "~4.19.2",    
+    "axios": "^1.7.2",
+    "cheerio": "^1.0.0-rc.12",
+    "express": "~4.19.2",
     "express-fileupload": "^1.5.2",
-    "form-data": "^4.0.0",       
+    "form-data": "^4.0.0",
     "lucide-react": "^0.344.0",
+    "node-fetch": "^2.6.1",   <-- ADICIONADO AQUI
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
