--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "express-fileupload": "^1.5.2",
     "form-data": "^4.0.0",
     "lucide-react": "^0.344.0",
-    "node-fetch": "^2.6.1",   <-- ADICIONADO AQUI
+    "node-fetch": "^2.6.1",  
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
