--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "cheerio": "^1.0.0-rc.12",
+    "cors": "^2.8.5",
     "express": "~4.19.2",
     "express-fileupload": "^1.5.2",
     "form-data": "^4.0.0",
