--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "form-data": "^4.0.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
+    "compression": "^1.8.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
