--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "compression": "^1.8.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "express-rate-limit": "^8.0.1",
+    "lru-cache": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
